--- a/tp3/ex2/index.html
+++ b/tp3/ex2/index.html
@@ -212,5 +212,6 @@
 		</div>
 	</div>
 
-
+	<!-- Charger le script seulement lorsque tous les éléments sont chargés -->
+	<script language="javascript" src="./index.js"></script>
 </body></html>
