Barre de recherche

--- a/tp3/ex2/index.html
+++ b/tp3/ex2/index.html
@@ -20,6 +20,8 @@
 	</div>
 
 	<!-- Charger les scripts seulement lorsque tous les éléments sont chargés -->
+	<!-- Import de fuse : librairie de recherche (rapide + légère) -->
+	<script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6"></script>
 	<script language="javascript" src="./products.js"></script>
 	<script language="javascript" src="./index.js"></script>
 </body></html>
